--- a/VC01.ipynb
+++ b/VC01.ipynb
@@ -30,14 +30,20 @@
   {
    "cell_type": "markdown",
    "id": "eba946f7-45cf-4f2e-a121-0dbed78bd7fd",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Tipos de Algoritmos\n",
     "- Atendiendo a la forma en la que calculanla solución:\n",
     "    - Algoritmos deterministas: Siempre la misma solución para los mismos datos de entrada (instancia).\n",
     "    - Algoritmos probabilistas: Pueden generar soluciones diferentes para los mismos datos de entrada (instancia).\n",
     "- Atendiendo al tipo de solución que proporcionan:\n",
-    "    - Algoritmosexactos: Proporcionanla solución óptima.\n",
+    "    - Algoritmos exactos: Proporcionanla solución óptima.\n",
     "    - Algoritmos aproximados:Proporcionanbuenas soluciones con un grado de aproximación al optimo\n",
     "    - Algoritmos heurísticos: Proporcionan buenas soluciones pero no podemos determinar si es la óptima."
    ]
@@ -56,13 +62,21 @@
     "- Imágenes: ![Texto alternativo](URL_de_la_imagen).\n",
     "- LaTeX (Ecuaciones): Usa $ para texto en línea o $$ para bloques de ecuaciones. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d648c0f-8d4a-427f-967e-bb00fcabcbe6",
+   "metadata": {},
+   "source": [
+    "prueba"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -74,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
