--- a/Algoritmos_de_Optimizacion/Apuntes.ipynb
+++ b/Algoritmos_de_Optimizacion/Apuntes.ipynb
@@ -1,6 +1,265 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c39bccb8-3e9d-4a58-ad04-c648100cde66",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Títulos: Usa # para el título principal, \n",
+    "## para subtítulos se usar ##, etc..\n",
+    "- **Negritas**: ** texto ** o __ texto __.\n",
+    "- *Cursivas*: * texto * o _ texto _.\n",
+    "- Listas: Usa - (guión y espacio) para listas con viñetas.\n",
+    "- Imágenes: ![Texto alternativo](URL_de_la_imagen).\n",
+    "- LaTeX (Ecuaciones): Usa $ para texto en línea o $$ para bloques de ecuaciones. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eba946f7-45cf-4f2e-a121-0dbed78bd7fd",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "## Tipos de Algoritmos\n",
+    "- Atendiendo a la forma en la que calculan la solución:\n",
+    "    - **Algoritmos deterministas**: Siempre la misma solución para los mismos datos de entrada (instancia).\n",
+    "    - **Algoritmos probabilistas**: Pueden generar soluciones diferentes para los mismos datos de entrada (instancia).\n",
+    "- Atendiendo al tipo de solución que proporcionan:\n",
+    "    - **Algoritmos exactos**: Proporcionanla solución óptima.\n",
+    "    - **Algoritmos aproximados**:Proporcionanbuenas soluciones con un grado de aproximación al optimo\n",
+    "    - **Algoritmos heurísticos**: Proporcionan buenas soluciones pero no podemos determinar si es la óptima."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ed009b-f801-45dd-b931-c3dce76b14a5",
+   "metadata": {},
+   "source": [
+    "# Algoritmos exactos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db294a17-fe7a-41cc-b613-1f1662692e57",
+   "metadata": {},
+   "source": [
+    "## Algoritmos de ordenación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c16298e9-cded-4ef5-9323-6a00f423cde0",
+   "metadata": {},
+   "source": [
+    "### Ordenación por inserción"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d087e0ed-8df4-4ee0-a88d-6cc615916336",
+   "metadata": {},
+   "source": [
+    "### Ordenación de burbuja"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88a9aacf-d929-419d-b225-fc430dd5eb20",
+   "metadata": {},
+   "source": [
+    "### Ordenación por selección"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23e7d774-b238-4ea9-ac6d-024ae53883f6",
+   "metadata": {},
+   "source": [
+    "### Ordenación por mezcla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c000e7-27a5-4091-8ee4-797208ca4cac",
+   "metadata": {},
+   "source": [
+    "### Ordenación por montículos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e9a3edc-187b-481e-843a-a94b0ab4d977",
+   "metadata": {},
+   "source": [
+    "### Ordenación rápida o quick sort"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3db5aaec-93be-4579-b523-4efab4addeff",
+   "metadata": {},
+   "source": [
+    "### Ordenación por residuos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7cb87d5-8de1-42bd-a509-4004fab6044c",
+   "metadata": {},
+   "source": [
+    "## Algoritmos de búsqueda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dfe2b4e-8f0b-4111-908e-68c5d8d5cc36",
+   "metadata": {},
+   "source": [
+    "### Búsqueda en amplitud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45d6c132-9701-49ce-bf85-1db843c54f4f",
+   "metadata": {},
+   "source": [
+    "### Búsqueda en profundidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2839fa50-f498-46c7-a2b9-dcdc5c9e9398",
+   "metadata": {},
+   "source": [
+    "### Ramificación y poda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57d692d5-d071-4034-8be6-036812a80171",
+   "metadata": {},
+   "source": [
+    "## Técnicas generales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97cc1a0b-c485-4317-b55f-6bfee61de2d1",
+   "metadata": {},
+   "source": [
+    "### Algoritmos voraces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ba924fe-cbe4-4b0b-a9ee-b49707708fee",
+   "metadata": {},
+   "source": [
+    "#### Técnica voraz - Greedy algorithms\n",
+    "Algoritmo de Prim\n",
+    "- Elige arista de menor coste\n",
+    "- Y se continua uno nuevo\n",
+    "- COmplejidad $O(n^2)$\n",
+    "- Si hay muchas aristas es mejor.\n",
+    "Algoritmo Kruskal\n",
+    "- Ordena las aristas por orden decreciente.\n",
+    "- Complejidad $O(a \\cdot log(n))$\n",
+    "- Si hay pocas aristas es mejor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49c2cbd7-bc89-4eca-bf7b-f96d57d52b65",
+   "metadata": {},
+   "source": [
+    "### Algoritmos de vuelta atrás (backtracking)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24681c83-8c4b-47b8-b6cf-fc86b4296a59",
+   "metadata": {},
+   "source": [
+    "- Para problemas discretos\n",
+    "- $O(2^n)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faea74d5-4d41-4af9-9a02-9fe7379bde21",
+   "metadata": {},
+   "source": [
+    "### Divide y vencerás"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b4f0a7-2264-43e1-a4aa-576ce8d1ca34",
+   "metadata": {},
+   "source": [
+    "- Inserción\n",
+    "    - $O(n)$ best case\n",
+    "    - $O(n^2)$ worst case\n",
+    "- Burbuja\n",
+    "- Selección\n",
+    "    - $O(n^2)$ siempre independiente de disposición.\n",
+    "- Mezcla (Merge Sort)\n",
+    "    - $O(n \\cdot log(n))$ siempre\n",
+    "- Quick Sort\n",
+    "    - $O(n \\cdot log(n))$ best case\n",
+    "    - $O(n^2)$ worst case\n",
+    "- Sucesión de Fibonacci\n",
+    "    - $O(2^n)$ a través de recurrencia\n",
+    "    - $O(n)$ por técnica iterativa (almacenando los valores intermedios)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ffb25f4-6274-4118-8035-e79fcfc63df8",
+   "metadata": {},
+   "source": [
+    "### Programación dinámica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7438d11-f197-4331-984c-f3fbbd3e5512",
+   "metadata": {},
+   "source": [
+    "### Programación lineal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3987dfa-a944-49df-9a2e-384d91256ac3",
+   "metadata": {},
+   "source": [
+    "### Descenso del gradiente"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd527e7e-b3fd-4545-8327-fdf11e0dc622",
+   "metadata": {},
+   "source": [
+    "# Algoritmos heurísticos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bef8e5b2-e5de-448f-a0ea-aa07f065d364",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a81c6b0d-c1c6-4c1f-bd43-1b66fd808a24",
@@ -25,52 +284,6 @@
     "        if i==k:\n",
     "            salida.append(i)\n",
     "print(salida)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eba946f7-45cf-4f2e-a121-0dbed78bd7fd",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "## Tipos de Algoritmos\n",
-    "- Atendiendo a la forma en la que calculanla solución:\n",
-    "    - Algoritmos deterministas: Siempre la misma solución para los mismos datos de entrada (instancia).\n",
-    "    - Algoritmos probabilistas: Pueden generar soluciones diferentes para los mismos datos de entrada (instancia).\n",
-    "- Atendiendo al tipo de solución que proporcionan:\n",
-    "    - Algoritmos exactos: Proporcionanla solución óptima.\n",
-    "    - Algoritmos aproximados:Proporcionanbuenas soluciones con un grado de aproximación al optimo\n",
-    "    - Algoritmos heurísticos: Proporcionan buenas soluciones pero no podemos determinar si es la óptima."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c39bccb8-3e9d-4a58-ad04-c648100cde66",
-   "metadata": {},
-   "source": [
-    "\n",
-    "# Títulos: Usa # para el título principal, \n",
-    "## para subtítulos se usar ##, etc..\n",
-    "- **Negritas**: ** texto ** o __ texto __.\n",
-    "- *Cursivas*: * texto * o _ texto _.\n",
-    "- Listas: Usa - (guión y espacio) para listas con viñetas.\n",
-    "- Imágenes: ![Texto alternativo](URL_de_la_imagen).\n",
-    "- LaTeX (Ecuaciones): Usa $ para texto en línea o $$ para bloques de ecuaciones. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3d648c0f-8d4a-427f-967e-bb00fcabcbe6",
-   "metadata": {},
-   "source": [
-    "prueba"
    ]
   },
   {
@@ -106,55 +319,6 @@
     "    else:\n",
     "        return  n * factorial(n-1)\n",
     "factorial(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18b4f0a7-2264-43e1-a4aa-576ce8d1ca34",
-   "metadata": {},
-   "source": [
-    "## Divide y vencerás\n",
-    "- Inserción\n",
-    "    - $O(n)$ best case\n",
-    "    - $O(n^2)$ worst case\n",
-    "- Burbuja\n",
-    "- Selección\n",
-    "    - $O(n^2)$ siempre independiente de disposición.\n",
-    "- Mezcla (Merge Sort)\n",
-    "    - $O(n \\cdot log(n))$ siempre\n",
-    "- Quick Sort\n",
-    "    - $O(n \\cdot log(n))$ best case\n",
-    "    - $O(n^2)$ worst case\n",
-    "- Sucesión de Fibonacci\n",
-    "    - $O(2^n)$ a través de recurrencia\n",
-    "    - $O(n)$ por técnica iterativa (almacenando los valores intermedios)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ba924fe-cbe4-4b0b-a9ee-b49707708fee",
-   "metadata": {},
-   "source": [
-    "### Técnica voraz - Greedy algorithms\n",
-    "Algoritmo de Prim\n",
-    "- Elige arista de menor coste\n",
-    "- Y se continua uno nuevo\n",
-    "- COmplejidad $O(n^2)$\n",
-    "- Si hay muchas aristas es mejor.\n",
-    "Algoritmo Kruskal\n",
-    "- Ordena las aristas por orden decreciente.\n",
-    "- Complejidad $O(a \\cdot log(n))$\n",
-    "- Si hay pocas aristas es mejor."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24681c83-8c4b-47b8-b6cf-fc86b4296a59",
-   "metadata": {},
-   "source": [
-    "## Vuelta atrás. Backtracking\n",
-    "- Para problemas discretos\n",
-    "- $O(2^n)$"
    ]
   },
   {
@@ -420,6 +584,23 @@
     "Algortimos de Búsqueda\n",
     "\n",
     "MinMax(*). Juegos con adversario"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca6024f-bcbf-4ca3-95f8-ab26f009bd4a",
+   "metadata": {},
+   "source": [
+    "# VC04"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b736b300-89ea-4543-b8a7-12f4154c96b3",
+   "metadata": {},
+   "source": [
+    "### Descenso de Gradiente\n",
+    "\n"
    ]
   }
  ],
