--- a/Algoritmos_de_Optimizacion/Algoritmos_AG1.ipynb
+++ b/Algoritmos_de_Optimizacion/Algoritmos_AG1.ipynb
@@ -6,7 +6,7 @@
     "id": "kQn6fbhgtH9I"
    },
    "source": [
-    "#Algoritmos - Actividad Guiada 1\n",
+    "# Algoritmos - Actividad Guiada 1\n",
     "\n",
     "Nombre: Raul Reyero Diez<br>\n",
     "URL: https://colab.research.google.com/drive/1lJqfBFQFbfb39vkg9KlMqWj527tXl9uY?usp=sharing\n",
@@ -20,12 +20,12 @@
     "id": "_t62Ge7ZuKnC"
    },
    "source": [
-    "##Torres de Hanoi con Divide y vencerás"
+    "## Torres de Hanoi con Divide y vencerás"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -78,10 +78,10 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "89"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
     "  else:\n",
     "    return Fibonacci(N-1)+Fibonacci(N-2)\n",
     "\n",
-    "Fibonacci(5)"
+    "Fibonacci(10)"
    ]
   },
   {
@@ -105,12 +105,12 @@
     "id": "RgT5XJsZ429L"
    },
    "source": [
-    "##Devolución de cambio por técnica voraz"
+    "## Devolución de cambio por técnica voraz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -125,7 +125,7 @@
        "[0, 1, 1, 0]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,11 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "FqOPyCmv_K65"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 1, 3]\n",
+      "\n",
+      "[3, 1, 4, 2]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def escribe(S):\n",
     "  n = len(S)\n",
@@ -210,7 +221,7 @@
     "\n",
     "    solucion[etapa] = 0\n",
     "\n",
-    "reinas(8)"
+    "reinas(4)"
    ]
   },
   {
@@ -345,9 +356,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -359,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
