--- a/Algoritmos_de_Optimizacion/Algoritmos_AG1.ipynb
+++ b/Algoritmos_de_Optimizacion/Algoritmos_AG1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -38,30 +38,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lleva la ficha  1  hasta  3\n",
-      "Lleva la ficha  1  hasta  2\n",
-      "Lleva la ficha  3  hasta  2\n",
-      "Lleva la ficha  1  hasta  3\n",
-      "Lleva la ficha  2  hasta  1\n",
-      "Lleva la ficha  2  hasta  3\n",
-      "Lleva la ficha  1  hasta  3\n"
+      "🚩Lleva la ficha 1  hasta  3\n",
+      "⭐Lleva la ficha 1  hasta  2\n",
+      "🚩Lleva la ficha 3  hasta  2\n",
+      "⭐Lleva la ficha 1  hasta  3\n",
+      "🚩Lleva la ficha 2  hasta  1\n",
+      "⭐Lleva la ficha 2  hasta  3\n",
+      "🚩Lleva la ficha 1  hasta  3\n"
      ]
     }
    ],
    "source": [
     "def Torres_Hanoi(N, desde, hasta):\n",
     "  if N ==1 :\n",
-    "    print(\"Lleva la ficha \" ,desde , \" hasta \", hasta )\n",
+    "    print(\"🚩Lleva la ficha\" ,desde , \" hasta \", hasta )\n",
     "\n",
     "  else:\n",
     "    #Torres_Hanoi(N-1, desde, 6-desde-hasta )\n",
     "    Torres_Hanoi(N-1, desde, 6-desde-hasta )\n",
-    "    print(\"Lleva la ficha \" ,desde , \" hasta \", hasta )\n",
+    "    print(\"⭐Lleva la ficha\" ,desde , \" hasta \", hasta )\n",
     "    #Torres_Hanoi(N-1,6-desde-hasta, hasta )\n",
     "    Torres_Hanoi(N-1, 6-desde-hasta  , hasta )\n",
     "\n",
-    "\n",
-    "Torres_Hanoi(3, 1 , 3)"
+    "Torres_Hanoi(3, 1 , 3)\n",
+    "# Torres_Hanoi(3, 1 , 3)\n",
+    "#   --> (L7) Torres_Hanoi(2, 1, 2)\n",
+    "#       ---> (L7) Torres_Hanoi(1, 1, 3) -> PRINT FINAL 1 a 3 (paso 1)\n",
+    "#       ---> PRINT INT 1 a 2 (paso 2)\n",
+    "#       ---> (L10) Torres_Hanoi(1, 3, 2) -> PRINT FINAL 3 a 2 (paso 3)\n",
+    "#   --> PRINT INT 1 a 3 (paso 4) <--- ESTE ES EL PASO CENTRAL\n",
+    "#   --> (L10) Torres_Hanoi(2, 2, 3)\n",
+    "#       ---> (L7) Torres_Hanoi(1, 2, 1) -> PRINT FINAL 2 a 1 (paso 5)\n",
+    "#       ---> PRINT INT 2 a 3 (paso 6)\n",
+    "#       ---> (L10) Torres_Hanoi(1, 1, 3) -> PRINT FINAL 1 a 3 (paso 7)"
    ]
   },
   {
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -122,10 +131,10 @@
     {
      "data": {
       "text/plain": [
-       "[0, 1, 1, 0]"
+       "[1, 1, 1, 1]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +153,7 @@
     "      return SOLUCION\n",
     "\n",
     "\n",
-    "cambio_monedas(15,[25,10,5,1])"
+    "cambio_monedas(41,[25,10,5,1])"
    ]
   },
   {
