--- a/Algoritmos_de_Optimizacion/Apuntes.ipynb
+++ b/Algoritmos_de_Optimizacion/Apuntes.ipynb
@@ -9,7 +9,7 @@
     "- *Cursivas*: * texto * o _ texto _.\n",
     "- Listas: Usa - (guión y espacio) para listas con viñetas.\n",
     "- Imágenes: ![Texto alternativo](URL_de_la_imagen).\n",
-    "- LaTeX (Ecuaciones): Usa $ para texto en línea o $$ para bloques de ecuaciones. "
+    "- LaTeX (Ecuaciones): Usa \"$\"  para texto en línea o  \"$$\" para bloques de ecuaciones. "
    ]
   },
   {
@@ -626,9 +626,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bef8e5b2-e5de-448f-a0ea-aa07f065d364",
+   "metadata": {},
+   "source": [
+    "Es posible encontrar soluciones próximas al óptimo en problemas complajoes en un tiempo razonable.\n",
+    "- Destinados a usarlos cuando:\n",
+    "    -  No hay un método exacto o requiere mucho tiempo (o memoria)\n",
+    "    -  No es imprescindible la solución óptima, pero se quiere una buena solución.\n",
+    "-  Terminología:\n",
+    "    - Metaheurísticas: Se refiere a técnicas generales (directriz, estrategia,...)\n",
+    "    - Heurístico: Se refiere a un algoritmo concreto.\n",
+    "\n",
+    "**Definición. Metaheurísticas**\n",
+    "-  Técnicas de algoritmos aproximados, en  general iterativos, que exploran el espacio de soluciones con una(o varias) estrategia(s) “inteligente(s)” o de “sentido común” adaptada al problema."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bef8e5b2-e5de-448f-a0ea-aa07f065d364",
+   "id": "f4646ff1-4836-4c5e-9125-ef9416bf7291",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aba3cc12-5fa8-468c-bda2-204d9a53c7cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f1a2b48-879c-4bb6-9a35-dc1fbe85b3fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a6eb2d1-665c-4595-acd9-4db09ce81a13",
    "metadata": {},
    "outputs": [],
    "source": []
