Actualizado archivos matemáticas + exámenes

--- a/Matemáticas_para_la_IA/Matemáticas_IA.ipynb
+++ b/Matemáticas_para_la_IA/Matemáticas_IA.ipynb
@@ -922,7 +922,7 @@
    "id": "98552c21-9267-40f6-b66d-03e86305e83c",
    "metadata": {},
    "source": [
-    "# Integración"
+    "# 📘 Integración"
    ]
   },
   {
@@ -1278,6 +1278,51 @@
     "  * Si $S \\ge 10 \\to$ Casos = $19-S$.\n",
     "* **Contar múltiplos de $k$ en $[1, N]$:** $\\lfloor N/k \\rfloor$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13874200-ae3a-4062-af13-a430fb185a17",
+   "metadata": {},
+   "source": [
+    "# 📘 Tipos de Aplicaciones (Funciones)\n",
+    "Sea una función $f: A \\to B$ (donde $A$ es el dominio y $B$ el codominio).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. Inyectiva (\"Uno a Uno\")\n",
+    "**Definición:** Elementos distintos del dominio tienen imágenes distintas. No hay dos flechas que lleguen al mismo punto.\n",
+    "* **Notación Lógica:**\n",
+    "  $$\\forall x_1, x_2 \\in A : f(x_1) = f(x_2) \\implies x_1 = x_2$$\n",
+    "  *(Si las salidas son iguales, las entradas TIENEN que ser iguales).*\n",
+    "\n",
+    "* **Prueba Gráfica (Horizontal Line Test):** Si trazas una línea horizontal, corta a la gráfica como mucho en un punto.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. Sobreyectiva / Suprayectiva (\"Sobre\")\n",
+    "**Definición:** Todos los elementos del conjunto de llegada ($B$) reciben al menos una flecha. No sobra nadie en $B$.\n",
+    "* **Notación Lógica:**\n",
+    "  $$\\forall y \\in B, \\exists x \\in A : f(x) = y$$\n",
+    "  *(Para todo elemento 'y' del destino, existe un origen 'x').*\n",
+    "\n",
+    "* **En resumen:** $\\text{Imagen}(f) = \\text{Codominio}(B)$.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. Biyectiva\n",
+    "**Definición:** Es Inyectiva **Y** Sobreyectiva a la vez.\n",
+    "* **Propiedad Clave:**\n",
+    "  Existe una **Función Inversa** única $f^{-1}: B \\to A$.\n",
+    "* **Correspondencia:** Relación perfecta uno a uno entre $A$ y $B$ ($|A| = |B|$)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d87d034-edab-487d-bb65-a7d80e81e8be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
