--- a/Algoritmos_de_Optimizacion/Algoritmos_AG2.ipynb
+++ b/Algoritmos_de_Optimizacion/Algoritmos_AG2.ipynb
@@ -9,7 +9,7 @@
     "#AG2 - Actividad Guiada 2\n",
     "Nombre: Raul Reyero <br>\n",
     "Link:   https://colab.research.google.com/drive/xxxxxxxxxxxxxxxxxxxxxxxxx <br>\n",
-    "Github: https://github.com/xxxxx/AlgoritmosOptimizacion\n",
+    "Github: https://github.com/Williams-MP/Algoritmos_de_optimizacion_entregas.git\n",
     "<br>\n",
     "\n",
     "\n"
