Notebook creado para proyecto

--- a/Algoritmos_de_Optimizacion/Proyecto_Liga.ipynb
+++ b/Algoritmos_de_Optimizacion/Proyecto_Liga.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "id": "17f58793-a7ea-4046-ba9c-e858252552f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Proyecto Liga"
+   ]
   },
   {
    "cell_type": "code",
